// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /korean/media-23248686 For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="ko"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_korean/12F2C/test/_63721677_p01kx435.jpg"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="connectionAltText"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="ko-KO"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="협상이 진행 중&quot;이라며 &quot;이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것&quot;이라고 덧붙였다 - BBC News 코리아"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/korean/media-23248686"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="connectionAltText"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_korean/12F2C/test/_63721677_p01kx435.jpg"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="협상이 진행 중&quot;이라며 &quot;이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것&quot;이라고 덧붙였다 - BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-09-13T15:11:13.000Z"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-09-13T15:11:14.000Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다 - BBC News 코리아
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/korean/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/korean/media-23248686"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/korean/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/korean/media-23248686","publisher":{"@type":"NewsMediaOrganization","name":"BBC News 코리아","publishingPrinciples":"https://www.bbc.com/korean/institutional-49283197","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/korean/media-23248686","name":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다"},"headline":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","datePublished":"2019-09-13T15:11:13.000Z","dateModified":"2019-09-13T15:11:14.000Z","author":{"@type":"NewsMediaOrganization","name":"BBC News 코리아","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"},"noBylinesPolicy":"https://www.bbc.com/korean/institutional-49283197#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"alt-text world service clip","description":"short","duration":"PT5S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg","uploadDate":"2018-12-20T11:06:51.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/cps/korean/media-23248686/p01kx42v/ko/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 bBwfkj"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 bTxfUP"
                  >
                    개인정보와 쿠키 처리방침을 변경했습니다
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    변경된 개인정보와 쿠키 처리방침이 이용자에게 어떤 영향을 미칠지 알려드립니다
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        알겠습니다
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        변경사항을 확인하세요
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 bBwfkj"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 bTxfUP"
                  >
                    쿠키생성에 동의하시나요
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 keksKX"
                  >
                    BBC는 이용자의 최적의 온라인 경험을 위해
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      쿠키
                    </a>
                    정보를 수집합니다. 쿠키생성에 동의하시는지 알려주세요
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iOCwEu"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        네, 동의합니다
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 dguCpL"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        아니요, 재 세팅 하겠습니다
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/korean"
               class="StyledLink-m3awbo-2 cUhFgi"
            >
              <svg height="24"
                   viewbox="0 0 233.01 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 gTUCvL"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M197.21 16.31v1.23h-15.44v-1.23h6V12h1.56v4.28zm-3.43-7.44V6.12h-10.2V4.89h11.74v1.56a32.82 32.82 0 0 1-.72 7.67l-1.54-.18a33.2 33.2 0 0 0 .61-3.9l-10.32.53-.23-1.29zM202.24 14.56a51.94 51.94 0 0 0 8.3-.59l.15 1.23a51.3 51.3 0 0 1-8.61.61h-1.41V9.49H207V6.05h-6.34V4.82h7.92v5.9h-6.3zM213.7 3.27V19.8h-1.56V3.27zM225.89 10.32c0 3.51-1.77 5.75-4.28 5.75s-4.3-2.24-4.3-5.75 1.79-5.75 4.3-5.75 4.28 2.23 4.28 5.75zm-1.49 0c0-2.67-1.16-4.39-2.8-4.39s-2.82 1.73-2.82 4.39 1.16 4.41 2.82 4.41 2.8-1.73 2.8-4.41zm8.6.83h-2.82v8.64h-1.56V3.31h1.56v6.56H233z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                코리아
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 dUSIGf"
            >
              내용으로 건너뛰기
            </a>
          </div>
        </div>
      </header>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Korean, Korean - Media, Korean - MAP, Korean - Media - MAP, Korean - undefined-category","uid":50924,"title":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","virtualReferrer":"\${documentReferrer}","contentType":"article-media-asset"}}
        </script>
      </amp-analytics>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=57&p=embedded_media::korean.embedded_media.media_asset.23248686.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:cps:dcf00cb4-a8a9-bb4a-844e-f58a4874906c]&x2=[amp]&x3=[news-korean]&x4=[ko]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article-media-asset]&x8=[simorgh]&x9=[협상이+진행+중\\"이라며+\\"이것이+입법+절차이고,+이것은+가는+바늘에+실을+꿰는+것\\"이라고+덧붙였다+-+BBC+News+코리아]&x11=[2019-09-13T15:11:13.000Z]&x12=[2019-09-13T15:11:14.000Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <main role="main"
            class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
      >
        <h1 id="content"
            tabindex="-1"
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
        >
          협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다
        </h1>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
              <amp-iframe sandbox="allow-scripts allow-same-origin"
                          layout="fill"
                          scrolling="no"
                          frameborder="0"
                          src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/korean/media-23248686/p01kx42v/ko/amp"
                          title="Media player"
                          allowfullscreen="allowfullscreen"
              >
                <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 800w"
                         layout="fill"
                         src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg"
                         placeholder="true"
                         alt
                         height="16"
                         width="9"
                         attribution
                >
                </amp-img>
                <noscript>
                  <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                    <img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 800w"
                         alt
                         src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg"
                         aria-hidden="true"
                         class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    >
                    <div class="MessageWrapper-sc-1pnftlt-1 ktBRKg">
                      <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                        사용 기기에서 미디어 재생이 지원되지 않습니다
                      </strong>
                    </div>
                  </div>
                </noscript>
              </amp-iframe>
            </div>
          </figure>
        </div>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
          <strong aria-hidden="true"
                  class="Headline-sc-1kh1qhu-0 krtLLo StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
          >
            협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다
          </strong>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG">
          <time datetime="2019-09-14"
                class="StyledTimestamp-um718p-0 gNVSxm"
          >
            14 9월 2019
          </time>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 introduction
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
            </b>
            <b>
              Heading
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <i class="italic-sc-1a0jt7x-0 igphUO">
              <b>
                인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
              </b>
            </i>
            <i class="italic-sc-1a0jt7x-0 igphUO">
              <b>
                subheading
              </b>
            </i>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
            </b>
            <b>
              crosshead
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다.
            <i class="italic-sc-1a0jt7x-0 igphUO">
              특히 가주 교육부에서 발급하는 이중언어구사 인증서가 눈길을 끈다
            </i>
            . 가주 교육부가 지난 2012년부터 발급하고 있는 이중언어구사 인증서는 한국어를 비롯해 외국어를 꾸준히 공부하고 있는 학생들이 대입 지원서를 작성할 때 특기 항목을 돋보이게 할 수 있는 좋은 기회다.
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <h2 id="또"
              tabindex="-1"
              class="SubHeading-sc-1kh1qhu-1 exafXz"
          >
            또
          </h2>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                "(법안과 관련한) 협상이 진행 중"이라며 "
                <a href="http://www.koreadaily.com/index.html?branch=HOME"
                   aria-label="이것이 입법 절차이고, 외부 사이트"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  이것이 입법 절차이고
                </a>
                , 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                트럼프 대통령은 공화당 안에서 법안을 반대하는 강경파들이 원하는 방향으로 약간은 법안을 수정할 가능성도 내비쳤다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                그는 공화당 내 일부 반대파들에 대해 "그들은 일부 점수를 얻기를 원한다"면서 "나는 그들이 일부 점수를 얻을 것으로 생각한다"고 말했다.
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                이 밖에 트럼프 대통령은 '트럼프 저격수'로 불릴 정도의 정적인 민주당 엘리자베스 워런(메사추세츠) 상원의원에 대해 "너무 과대평가됐다"면서 "공개석상에서 분노와 적의를 꾸준히 표출하면서 신뢰를 잃었다"고 비판했다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <a href="http://www.bbc.com/korean/media-23136266"
               class="InlineLink-hkwpaz-0 idscKS"
            >
              그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
            </a>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
              <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                  <amp-img alt="test image"
                           attribution
                           layout="responsive"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/17D4C/test/_63721679_testimage.jpg"
                           height="360"
                           width="640"
                  >
                  </amp-img>
                </div>
              </div>
              <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
              </div>
            </div>
          </figure>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/korean"
               class="StyledLink-m3awbo-2 cUhFgi"
            >
              <svg height="24"
                   viewbox="0 0 233.01 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 gTUCvL"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M197.21 16.31v1.23h-15.44v-1.23h6V12h1.56v4.28zm-3.43-7.44V6.12h-10.2V4.89h11.74v1.56a32.82 32.82 0 0 1-.72 7.67l-1.54-.18a33.2 33.2 0 0 0 .61-3.9l-10.32.53-.23-1.29zM202.24 14.56a51.94 51.94 0 0 0 8.3-.59l.15 1.23a51.3 51.3 0 0 1-8.61.61h-1.41V9.49H207V6.05h-6.34V4.82h7.92v5.9h-6.3zM213.7 3.27V19.8h-1.56V3.27zM225.89 10.32c0 3.51-1.77 5.75-4.28 5.75s-4.3-2.24-4.3-5.75 1.79-5.75 4.3-5.75 4.28 2.23 4.28 5.75zm-1.49 0c0-2.67-1.16-4.39-2.8-4.39s-2.82 1.73-2.82 4.39 1.16 4.41 2.82 4.41 2.8-1.73 2.8-4.41zm8.6.83h-2.82v8.64h-1.56V3.31h1.56v6.56H233z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                코리아
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 kzZWAD">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/korean/institutional-49283197"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    BBC News를 신뢰할 수 있는 이유
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/terms/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    이용 약관
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/aboutthebbc"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    BBC 소개
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/privacy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    개인정보취급방침
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    쿠키정책
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/korean/institutional-42224941"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    고객센터
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. BBC는 외부 인터넷 사이트 및 콘텐츠에 대한 책임을 지지않습니다.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  외부 콘텐츠 링크에 대한 본사 정책 보기.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /korean/media-23248686 For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="ko"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_korean/12F2C/test/_63721677_p01kx435.jpg"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="connectionAltText"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="ko-KO"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News 코리아"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="협상이 진행 중&quot;이라며 &quot;이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것&quot;이라고 덧붙였다 - BBC News 코리아"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/korean/media-23248686"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다."
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="connectionAltText"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="http://ichef.test.bbci.co.uk/news/1024/branded_korean/12F2C/test/_63721677_p01kx435.jpg"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcnews"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="협상이 진행 중&quot;이라며 &quot;이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것&quot;이라고 덧붙였다 - BBC News 코리아"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-09-13T15:11:13.000Z"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-09-13T15:11:14.000Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다 - BBC News 코리아
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/korean/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/korean/media-23248686"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/korean/media-23248686.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/korean/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/korean/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/korean/media-23248686","publisher":{"@type":"NewsMediaOrganization","name":"BBC News 코리아","publishingPrinciples":"https://www.bbc.com/korean/institutional-49283197","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/korean/media-23248686","name":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다"},"headline":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","datePublished":"2019-09-13T15:11:13.000Z","dateModified":"2019-09-13T15:11:14.000Z","author":{"@type":"NewsMediaOrganization","name":"BBC News 코리아","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"},"noBylinesPolicy":"https://www.bbc.com/korean/institutional-49283197#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"alt-text world service clip","description":"short","duration":"PT5S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg","uploadDate":"2018-12-20T11:06:51.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/cps/korean/media-23248686/p01kx42v/ko"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/korean"
               class="StyledLink-m3awbo-2 cUhFgi"
            >
              <svg height="24"
                   viewbox="0 0 233.01 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 gTUCvL"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M197.21 16.31v1.23h-15.44v-1.23h6V12h1.56v4.28zm-3.43-7.44V6.12h-10.2V4.89h11.74v1.56a32.82 32.82 0 0 1-.72 7.67l-1.54-.18a33.2 33.2 0 0 0 .61-3.9l-10.32.53-.23-1.29zM202.24 14.56a51.94 51.94 0 0 0 8.3-.59l.15 1.23a51.3 51.3 0 0 1-8.61.61h-1.41V9.49H207V6.05h-6.34V4.82h7.92v5.9h-6.3zM213.7 3.27V19.8h-1.56V3.27zM225.89 10.32c0 3.51-1.77 5.75-4.28 5.75s-4.3-2.24-4.3-5.75 1.79-5.75 4.3-5.75 4.28 2.23 4.28 5.75zm-1.49 0c0-2.67-1.16-4.39-2.8-4.39s-2.82 1.73-2.82 4.39 1.16 4.41 2.82 4.41 2.8-1.73 2.8-4.41zm8.6.83h-2.82v8.64h-1.56V3.31h1.56v6.56H233z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                코리아
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 dUSIGf"
            >
              내용으로 건너뛰기
            </a>
          </div>
        </div>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=57&amp;p=embedded_media::korean.embedded_media.media_asset.23248686.page&amp;x1=[urn:bbc:cps:dcf00cb4-a8a9-bb4a-844e-f58a4874906c]&amp;x2=[responsive]&amp;x3=[news-korean]&amp;x4=[ko]&amp;x7=[article-media-asset]&amp;x8=[simorgh-nojs]&amp;x9=[협상이+진행+중&quot;이라며+&quot;이것이+입법+절차이고,+이것은+가는+바늘에+실을+꿰는+것&quot;이라고+덧붙였다+-+BBC+News+코리아]&amp;x11=[2019-09-13T15:11:13.000Z]&amp;x12=[2019-09-13T15:11:14.000Z]"
        >
      </noscript>
      <main role="main"
            class="GridWrapper-sc-12lwanc-0 StyledGrid-oo43dv-0 jHslwF"
      >
        <h1 id="content"
            tabindex="-1"
            class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
        >
          협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다
        </h1>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 Wrapper-sc-7tc6v2-0 kvwPKI">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
              <iframe src="https://polling.test.bbc.co.uk/ws/av-embeds/cps/korean/media-23248686/p01kx42v/ko"
                      title="Media player"
                      allow="autoplay; fullscreen"
                      scrolling="no"
                      allowfullscreen
                      class="StyledIframe-fuo2ed-0 dIyDYU"
              >
              </iframe>
              <noscript>
                <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg"
                       aria-hidden="true"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                  <div class="MessageWrapper-sc-1pnftlt-1 ktBRKg">
                    <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                      사용 기기에서 미디어 재생이 지원되지 않습니다
                    </strong>
                  </div>
                </div>
              </noscript>
            </div>
          </figure>
        </div>
        <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
          <strong aria-hidden="true"
                  class="Headline-sc-1kh1qhu-0 krtLLo StyledFauxHeadline-sc-15zvetq-0 jJBkMr"
          >
            협상이 진행 중"이라며 "이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다
          </strong>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi StyledTimestamp-oo43dv-1 jqCfrG">
          <time datetime="2019-09-14"
                class="StyledTimestamp-um718p-0 gNVSxm"
          >
            14 9월 2019
          </time>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 introduction
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
            </b>
            <b>
              Heading
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <i class="italic-sc-1a0jt7x-0 igphUO">
              <b>
                인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
              </b>
            </i>
            <i class="italic-sc-1a0jt7x-0 igphUO">
              <b>
                subheading
              </b>
            </i>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <b>
              인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
            </b>
            <b>
              crosshead
            </b>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다.
            <i class="italic-sc-1a0jt7x-0 igphUO">
              특히 가주 교육부에서 발급하는 이중언어구사 인증서가 눈길을 끈다
            </i>
            . 가주 교육부가 지난 2012년부터 발급하고 있는 이중언어구사 인증서는 한국어를 비롯해 외국어를 꾸준히 공부하고 있는 학생들이 대입 지원서를 작성할 때 특기 항목을 돋보이게 할 수 있는 좋은 기회다.
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <h2 id="또"
              tabindex="-1"
              class="SubHeading-sc-1kh1qhu-1 exafXz"
          >
            또
          </h2>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                "(법안과 관련한) 협상이 진행 중"이라며 "
                <a href="http://www.koreadaily.com/index.html?branch=HOME"
                   aria-label="이것이 입법 절차이고, 외부 사이트"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  이것이 입법 절차이고
                </a>
                , 이것은 가는 바늘에 실을 꿰는 것"이라고 덧붙였다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                트럼프 대통령은 공화당 안에서 법안을 반대하는 강경파들이 원하는 방향으로 약간은 법안을 수정할 가능성도 내비쳤다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                그는 공화당 내 일부 반대파들에 대해 "그들은 일부 점수를 얻기를 원한다"면서 "나는 그들이 일부 점수를 얻을 것으로 생각한다"고 말했다.
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                이 밖에 트럼프 대통령은 '트럼프 저격수'로 불릴 정도의 정적인 민주당 엘리자베스 워런(메사추세츠) 상원의원에 대해 "너무 과대평가됐다"면서 "공개석상에서 분노와 적의를 꾸준히 표출하면서 신뢰를 잃었다"고 비판했다.
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <p class="Paragraph-k859h4-0 Kskll">
            <a href="http://www.bbc.com/korean/media-23136266"
               class="InlineLink-hkwpaz-0 idscKS"
            >
              그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
            </a>
          </p>
        </div>
        <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
          <div class="Wrapper-e2169q-0 kopXQT">
            <ul dir="ltr"
                role="list"
                class="BulletedList-sc-13z0d8v-0 kigDRD"
            >
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
              <li role="listitem"
                  class="BulletedListItem-sc-13z0d8v-1 kHsWph"
              >
                <a href="http://www.bbc.com/korean/media-23136266"
                   class="InlineLink-hkwpaz-0 idscKS"
                >
                  그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
          <figure class="Figure-sc-6a3dhy-0 gJUCFc">
            <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
              <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                  <div class="lazyload-placeholder">
                  </div>
                  <noscript>
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/17D4C/test/_63721679_testimage.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/17D4C/test/_63721679_testimage.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/17D4C/test/_63721679_testimage.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/17D4C/test/_63721679_testimage.jpg 624w, https://ichef.bbci.co.uk/news/640/cpsdevpb/17D4C/test/_63721679_testimage.jpg 640w"
                         alt="test image"
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/17D4C/test/_63721679_testimage.jpg"
                         width="640"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </noscript>
                </div>
              </div>
              <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
              </div>
            </div>
          </figure>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/korean"
               class="StyledLink-m3awbo-2 cUhFgi"
            >
              <svg height="24"
                   viewbox="0 0 233.01 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 gTUCvL"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M197.21 16.31v1.23h-15.44v-1.23h6V12h1.56v4.28zm-3.43-7.44V6.12h-10.2V4.89h11.74v1.56a32.82 32.82 0 0 1-.72 7.67l-1.54-.18a33.2 33.2 0 0 0 .61-3.9l-10.32.53-.23-1.29zM202.24 14.56a51.94 51.94 0 0 0 8.3-.59l.15 1.23a51.3 51.3 0 0 1-8.61.61h-1.41V9.49H207V6.05h-6.34V4.82h7.92v5.9h-6.3zM213.7 3.27V19.8h-1.56V3.27zM225.89 10.32c0 3.51-1.77 5.75-4.28 5.75s-4.3-2.24-4.3-5.75 1.79-5.75 4.3-5.75 4.28 2.23 4.28 5.75zm-1.49 0c0-2.67-1.16-4.39-2.8-4.39s-2.82 1.73-2.82 4.39 1.16 4.41 2.82 4.41 2.8-1.73 2.8-4.41zm8.6.83h-2.82v8.64h-1.56V3.31h1.56v6.56H233z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                코리아
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 kzZWAD">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 gRKcvt"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/korean/institutional-49283197"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    BBC News를 신뢰할 수 있는 이유
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/terms/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    이용 약관
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/aboutthebbc"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    BBC 소개
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/privacy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    개인정보취급방침
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.co.uk/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    쿠키정책
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/korean/institutional-42224941"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    고객센터
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. BBC는 외부 인터넷 사이트 및 콘텐츠에 대한 책임을 지지않습니다.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  외부 콘텐츠 링크에 대한 본사 정책 보기.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"firstPublished":1568387473000,"lastPublished":1568387474000,"lastUpdated":1568387482439,"id":"mock-id","locators":{"assetUri":"/korean/media-23248686","cpsUrn":"urn:bbc:content:assetUri:korean/media-23248686","curie":"http://www.bbc.co.uk/asset/dcf00cb4-a8a9-bb4a-844e-f58a4874906c"},"type":"MAP","createdBy":"korean-v6","language":"ko","options":{"isIgorSeoTagsEnabled":false,"includeComments":false,"allowRightHandSide":true,"isFactCheck":false,"allowDateStamp":true,"hasNewsTracker":false,"allowRelatedStoriesBox":true,"isKeyContent":false,"allowHeadline":true,"isBreakingNews":false,"allowPrintingSharingLinks":true},"analyticsLabels":{"cps_asset_type":"map","counterName":"korean.embedded_media.media_asset.23248686.page","cps_asset_id":"23248686"},"tags":{},"version":"v1.1.0","blockTypes":["media","paragraph","crosshead","list","image","social_embed"],"includeComments":false},"content":{"model":{"blocks":[{"model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","blocks":[{"type":"fragment","model":{"text":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"type":"visuallyHiddenHeadline","id":"mock-id","position":[1]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p01kx42s","blocks":[{"type":"aresMedia","model":{"blocks":[{"type":"aresMediaMetadata","blockId":"urn:bbc:ares::clip:p01kx42s","model":{"advertising":true,"embedding":true,"format":"audio_video","id":"mock-id","imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p01kx435.jpg","subType":"clip","synopses":{"short":"short"},"title":"alt-text world service clip","versions":[{"versionId":"p01kx42v","types":["Original"],"duration":5,"durationISO8601":"PT5S","warnings":{},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1545304011000}],"available":true},"id":"mock-id","position":[2,1,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"locator":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg","originCode":"pips"},"id":"mock-id","position":[2,1,2,1]}]},"id":"mock-id","position":[2,1,2]}]},"id":"mock-id","position":[2,1]}]},"id":"mock-id","position":[2]},{"model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","blocks":[{"type":"fragment","model":{"text":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다","attributes":[]},"id":"mock-id","position":[3,1,1,1]}]},"id":"mock-id","position":[3,1,1]}]},"id":"mock-id","position":[3,1]}]},"type":"fauxHeadline","id":"mock-id","position":[3]},{"type":"timestamp","model":{"firstPublished":1568387473000,"lastPublished":1568387474000},"id":"mock-id","position":[4]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 introduction ","blocks":[{"type":"fragment","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 introduction ","attributes":["bold"]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]}]},"id":"mock-id","position":[5]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 Heading","blocks":[{"type":"fragment","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다","attributes":["bold"]},"id":"mock-id","position":[6,1,1]},{"type":"fragment","model":{"text":" Heading","attributes":["bold"]},"id":"mock-id","position":[6,1,2]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":" 인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 subheading","blocks":[{"type":"fragment","model":{"text":" 인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다","attributes":["bold","italic"]},"id":"mock-id","position":[7,1,1]},{"type":"fragment","model":{"text":" subheading","attributes":["bold","italic"]},"id":"mock-id","position":[7,1,2]}]},"id":"mock-id","position":[7,1]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다 crosshead ","blocks":[{"type":"fragment","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다","attributes":["bold"]},"id":"mock-id","position":[8,1,1]},{"type":"fragment","model":{"text":" crosshead ","attributes":["bold"]},"id":"mock-id","position":[8,1,2]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다","blocks":[{"type":"fragment","model":{"text":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다","attributes":[]},"id":"mock-id","position":[9,1,1]}]},"id":"mock-id","position":[9,1]}]},"id":"mock-id","position":[9]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다. 특히 가주 교육부에서 발급하는 이중언어구사 인증서가 눈길을 끈다. 가주 교육부가 지난 2012년부터 발급하고 있는 이중언어구사 인증서는 한국어를 비롯해 외국어를 꾸준히 공부하고 있는 학생들이 대입 지원서를 작성할 때 특기 항목을 돋보이게 할 수 있는 좋은 기회다.","blocks":[{"type":"fragment","model":{"text":"LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다. ","attributes":[]},"id":"mock-id","position":[10,1,1]},{"type":"fragment","model":{"text":"특히 가주 교육부에서 발급하는 이중언어구사 인증서가 눈길을 끈다","attributes":["italic"]},"id":"mock-id","position":[10,1,2]},{"type":"fragment","model":{"text":". 가주 교육부가 지난 2012년부터 발급하고 있는 이중언어구사 인증서는 한국어를 비롯해 외국어를 꾸준히 공부하고 있는 학생들이 대입 지원서를 작성할 때 특기 항목을 돋보이게 할 수 있는 좋은 기회다.","attributes":[]},"id":"mock-id","position":[10,1,3]}]},"id":"mock-id","position":[10,1]}]},"id":"mock-id","position":[10]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"또","blocks":[{"type":"fragment","model":{"text":"또","attributes":[]},"id":"mock-id","position":[11,1,1,1]}]},"id":"mock-id","position":[11,1,1]}]},"id":"mock-id","position":[11,1]}]},"id":"mock-id","position":[11]},{"model":{"blocks":[{"model":{"blocks":[{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"\\"(법안과 관련한) 협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다. ","blocks":[{"type":"fragment","model":{"text":"\\"(법안과 관련한) 협상이 진행 중\\"이라며 \\"","attributes":[]},"id":"mock-id","position":[12,1,1,1,1]},{"type":"urlLink","model":{"text":"이것이 입법 절차이고","locator":"http://www.koreadaily.com/index.html?branch=HOME","blocks":[{"type":"fragment","model":{"text":"이것이 입법 절차이고","attributes":[]},"id":"mock-id","position":[12,1,1,1,2,1]}],"isExternal":true},"id":"mock-id","position":[12,1,1,1,2]},{"type":"fragment","model":{"text":", 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다. ","attributes":[]},"id":"mock-id","position":[12,1,1,1,3]}]},"id":"mock-id","position":[12,1,1,1]}]},"id":"mock-id","position":[12,1,1]}]},"type":"unorderedList","id":"mock-id","position":[12,1]}]},"type":"text","id":"mock-id","position":[12]},{"model":{"blocks":[{"model":{"blocks":[{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"트럼프 대통령은 공화당 안에서 법안을 반대하는 강경파들이 원하는 방향으로 약간은 법안을 수정할 가능성도 내비쳤다. ","blocks":[{"type":"fragment","model":{"text":"트럼프 대통령은 공화당 안에서 법안을 반대하는 강경파들이 원하는 방향으로 약간은 법안을 수정할 가능성도 내비쳤다. ","attributes":[]},"id":"mock-id","position":[13,1,1,1,1]}]},"id":"mock-id","position":[13,1,1,1]}]},"id":"mock-id","position":[13,1,1]}]},"type":"unorderedList","id":"mock-id","position":[13,1]}]},"type":"text","id":"mock-id","position":[13]},{"model":{"blocks":[{"model":{"blocks":[{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"그는 공화당 내 일부 반대파들에 대해 \\"그들은 일부 점수를 얻기를 원한다\\"면서 \\"나는 그들이 일부 점수를 얻을 것으로 생각한다\\"고 말했다. ","blocks":[{"type":"fragment","model":{"text":"그는 공화당 내 일부 반대파들에 대해 \\"그들은 일부 점수를 얻기를 원한다\\"면서 \\"나는 그들이 일부 점수를 얻을 것으로 생각한다\\"고 말했다. ","attributes":[]},"id":"mock-id","position":[14,1,1,1,1]}]},"id":"mock-id","position":[14,1,1,1]}]},"id":"mock-id","position":[14,1,1]},{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"이 밖에 트럼프 대통령은 '트럼프 저격수'로 불릴 정도의 정적인 민주당 엘리자베스 워런(메사추세츠) 상원의원에 대해 \\"너무 과대평가됐다\\"면서 \\"공개석상에서 분노와 적의를 꾸준히 표출하면서 신뢰를 잃었다\\"고 비판했다. ","blocks":[{"type":"fragment","model":{"text":"이 밖에 트럼프 대통령은 '트럼프 저격수'로 불릴 정도의 정적인 민주당 엘리자베스 워런(메사추세츠) 상원의원에 대해 \\"너무 과대평가됐다\\"면서 \\"공개석상에서 분노와 적의를 꾸준히 표출하면서 신뢰를 잃었다\\"고 비판했다. ","attributes":[]},"id":"mock-id","position":[14,1,2,1,1]}]},"id":"mock-id","position":[14,1,2,1]}]},"id":"mock-id","position":[14,1,2]}]},"type":"orderedList","id":"mock-id","position":[14,1]}]},"type":"text","id":"mock-id","position":[14]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","blocks":[{"type":"urlLink","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","locator":"http://www.bbc.com/korean/media-23136266","blocks":[{"type":"fragment","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","attributes":[]},"id":"mock-id","position":[15,1,1,1]}],"isExternal":false},"id":"mock-id","position":[15,1,1]}]},"id":"mock-id","position":[15,1]}]},"id":"mock-id","position":[15]},{"model":{"blocks":[{"model":{"blocks":[{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","blocks":[{"type":"urlLink","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","locator":"http://www.bbc.com/korean/media-23136266","blocks":[{"type":"fragment","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","attributes":[]},"id":"mock-id","position":[16,1,1,1,1,1]}],"isExternal":false},"id":"mock-id","position":[16,1,1,1,1]}]},"id":"mock-id","position":[16,1,1,1]}]},"id":"mock-id","position":[16,1,1]},{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","blocks":[{"type":"urlLink","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","locator":"http://www.bbc.com/korean/media-23136266","blocks":[{"type":"fragment","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","attributes":[]},"id":"mock-id","position":[16,1,2,1,1,1]}],"isExternal":false},"id":"mock-id","position":[16,1,2,1,1]}]},"id":"mock-id","position":[16,1,2,1]}]},"id":"mock-id","position":[16,1,2]},{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","blocks":[{"type":"urlLink","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","locator":"http://www.bbc.com/korean/media-23136266","blocks":[{"type":"fragment","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","attributes":[]},"id":"mock-id","position":[16,1,3,1,1,1]}],"isExternal":false},"id":"mock-id","position":[16,1,3,1,1]}]},"id":"mock-id","position":[16,1,3,1]}]},"id":"mock-id","position":[16,1,3]},{"type":"listItem","model":{"blocks":[{"type":"paragraph","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","blocks":[{"type":"urlLink","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","locator":"http://www.bbc.com/korean/media-23136266","blocks":[{"type":"fragment","model":{"text":"그레이스 이(18)양은 이달 초 진행된 졸업식에서 황금색의 인증이 붙은 증서를 받았다","attributes":[]},"id":"mock-id","position":[16,1,4,1,1,1]}],"isExternal":false},"id":"mock-id","position":[16,1,4,1,1]}]},"id":"mock-id","position":[16,1,4,1]}]},"id":"mock-id","position":[16,1,4]}]},"type":"unorderedList","id":"mock-id","position":[16,1]}]},"type":"text","id":"mock-id","position":[16]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"test image","blocks":[{"type":"fragment","model":{"text":"test image","attributes":[]},"id":"mock-id","position":[17,1,1,1,1]}]},"id":"mock-id","position":[17,1,1,1]}]},"id":"mock-id","position":[17,1,1]}]},"id":"mock-id","position":[17,1]},{"type":"rawImage","model":{"copyrightHolder":"BBC","height":360,"locator":"17D4C/test/_63721679_testimage.jpg","originCode":"cpsdevpb","width":640},"id":"mock-id","position":[17,2]}]},"id":"mock-id","position":[17]}]}},"promo":{"headlines":{"shortHeadline":"WSMEDIA TEST -","headline":"협상이 진행 중\\"이라며 \\"이것이 입법 절차이고, 이것은 가는 바늘에 실을 꿰는 것\\"이라고 덧붙였다"},"locators":{"assetUri":"/korean/media-23248686","cpsUrn":"urn:bbc:content:assetUri:korean/media-23248686","curie":"http://www.bbc.co.uk/asset/dcf00cb4-a8a9-bb4a-844e-f58a4874906c"},"summary":"인증서를 통해 이 양은 두 가지 언어를 유창하게 사용하는 능력을 갖췄음을 주 정부로부터 인정받은 셈이다. LA통합교육구(LAUSD)가 최근 고등학교 졸업 필수과목에 외국어 이중언어 교육을 포함하는 안을 추진하고 있는 가운데, 각 교육구에서 제공하는 이중언어 프로그램에 대한 관심이 늘어나고 있다.","timestamp":1568387482439,"passport":{},"media":{"id":"mock-id","subType":"clip","format":"video","title":"alt-text world service clip","synopses":{"short":"short"},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p01kx435.jpg","embedding":true,"advertising":true,"caption":"short","versions":[{"versionId":"p01kx42v","types":["Original"],"duration":5,"durationISO8601":"PT5S","warnings":{},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1545304011000}],"type":"media"},"indexImage":{"id":"mock-id","subType":"index","href":"http://b.files.bbci.co.uk/12F2C/test/_63721677_p01kx435.jpg","path":"/cpsdevpb/12F2C/test/_63721677_p01kx435.jpg","height":576,"width":1024,"altText":"connectionAltText","copyrightHolder":"BBC","type":"image"},"id":"mock-id","type":"cps"},"relatedContent":{"section":{"subType":"index","name":"Media","uri":"/korean/media","type":"simple"},"site":{"subType":"site","name":"BBC 코리아","uri":"/korean","type":"simple"},"groups":[]}},"path":"/korean/media-23248686","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [16]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="korean"
            src="http://localhost:7080/static/js/korean-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
